--- a/src/Archmage/UserBundle/Resources/translations/messages.es.yml
+++ b/src/Archmage/UserBundle/Resources/translations/messages.es.yml
@@ -33,7 +33,7 @@ registration:
     back: 'Volver a la página original.'
     submit: 'Registrar'
     flash:
-        user_created: 'El usuario se ha creado satisfactoriamente!'
+        user_created: 'El usuario se ha creado satisfactoriamente, comprueba tu correo!'
     email:
         subject: 'Bienvenido %username%!'
         message: "Hola %username%!\n\nPara completar la validación de tu cuenta - por favor visita %confirmationUrl%\n\nAtentamente,\nel Equipo.\n"
@@ -65,3 +65,5 @@ form:
     password_confirmation: 'Repita la contraseña'
     new_password: 'Nueva contraseña'
     new_password_confirmation: 'Repita la contraseña'
+#custom
+"Bad credentials." : "Nombre de usuario y/o contraseña incorrectos!"
